# coding-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/architecture/: generic-agent-finance.md  ops-like-traversal.md
examples/: sample_credit_agreement.txt  task_credit_agreement.json
examples/notebooks/: agent_features_test.ipynb  ops_pdf_tools_demo.ipynb
output/run-1/: run_result.json
output/run-2/: extraction.json  run_result.json  run_trace.json  summary_report.md
output/run-3/: extraction.json  run_result.json  run_trace.json  summary_report.md
output/run-4/: extraction.json  run_result.json  run_trace.json  summary_report.md
output/run-ops/: extraction.json  run_result.json  run_trace.json  summary_report.md
skills/finance-docs/: SKILL.md
skills/finance-docs/references/: compliance-certificate-fields.md  (+2 more)
src/: main.py
src/agent_core/: chat_runner.py  document_strategies.yaml  memory.py  models.py  runner.py  session.py  strategy.py  system_prompt.py  tooling.py
src/generic_finance_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/llm/: catalog.py  models.py  providers.py
src/profiles/: base.py  finance_docs.py
src/schemas/: finance_registry.py
src/tools/: bash_tools.py  chat_tools.py  document_tools.py  finance_tools.py  retrieval_tools.py  state_tools.py
tests/: test_document_map_tools.py  test_finance_tools.py  test_model_selection.py  test_ops_agent_flow.py  test_provider_priority.py  test_retrieval_tools.py  test_session.py  test_tool_policy.py
workspace/: IDENTITY.md
(+2 files in other folders)
