[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generic-finance-agent"
version = "0.1.0"
description = "Generic headless agent with pluggable finance tools"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0.1", "pdfplumber>=0.11.0", "pandas>=2.0.0", "openpyxl>=3.1.0"]

[project.optional-dependencies]
pdf = ["pypdf>=5.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
finance-agent = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main", "env_loader"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_core*", "profiles*", "tools*", "llm*", "schemas*"]

[tool.setuptools.package-data]
agent_core = ["*.yaml"]
schemas = ["finance/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
